whitespace on movil swipe fixed

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -1,6 +1,6 @@
 //----------------------------------------------Nav-----------------------------------------------
 .nav-div {
-  width: 100vw;
+  width: 100%;
   margin-bottom: 35px;
   background-color: @colorNavBar;
 }
@@ -61,7 +61,7 @@
 }
 //----------------------------------------FOOTER-------------------------------------
 footer{
-  width: 100vw;
+  width: 100%;
   min-height: 70px;
   background-color: @colorNavBar;
   padding: 15px;
@@ -133,7 +133,7 @@ footer{
 }
 /*----------------------------------------HOME-------------------------------------*/
 .home-container {
-  width: 92vw;
+  width: 92%;
   margin: 20px auto 30px auto;
   .section-1{
     width: 92%;
