--- a/public/styles/tema.less
+++ b/public/styles/tema.less
@@ -32,8 +32,11 @@ button, input[type="submit"], input[type="reset"] {
     -o-background-size: auto;
     background-size: auto;
     font-family: 'Roboto';
+    width: 100%;
+    height: 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden; 
   }
   p{
     color: @colorPrimaryText;
